--- a/year8-today.html
+++ b/year8-today.html
@@ -145,10 +145,10 @@
                 { date: '2025-05-29', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSUjLLE2eg3Sptw5H4AD4lTARmzaVTHMtWRo7bcitWh2Hw' },
                 { date: '2025-05-30', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS6_TI0uyeoRagunl3PRUcMAT4KyJF5kInBdNCUhJh2Fn0' },
                 { date: '2025-05-31', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQRpH4NAtB2Sa0ok1ovPYE3AXXITMfs7jYdtvvKSHHwfHg' },
-                { date: '2025-06-22', time: '06:59', url: 'K' },
-                { date: '2025-06-23', time: '06:59', url: 'htKfM9lcsqw' },
-                { date: '2025-06-24', time: '06:59', url: '8' },
-                { date: '2025-06-25', time: '06:59', url: 'M' }
+                { date: '2025-06-01', time: '06:59', url: '' },
+                { date: '2025-06-02', time: '06:59', url: '' },
+                { date: '2025-06-03', time: '06:59', url: '' },
+                { date: '2025-06-04', time: '06:59', url: '' }
               ];      
       
 function updateIframeSrc() {
