--- a/Year7-today.html
+++ b/Year7-today.html
@@ -145,8 +145,8 @@
                 { date: '2025-05-29', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS6_eMgCCrHS4PkhKOO6C7dAZWUo5eQL1Xcx63MWP7nzDw' },
                 { date: '2025-05-30', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTDs6rcBaigTJBiBW-qaFMuAcINYafHuzFnPWCa8fXsxNU' },
                 { date: '2025-05-31', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSWYHl10FXsRIuSB_6iRY2YAVjsVdYVnw-dP5sSCib8TG8' },
-                { date: '2025-06-01', time: '06:59', url: '' },
-                { date: '2025-06-02', time: '06:59', url: '' },
+                { date: '2025-06-01', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSiKwAO3PqySZ7K-uyBk-bQAfyYqfP2ZX65mDeHAnbxYIc' },
+                { date: '2025-06-02', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTj6E5rDKVMSYJUDgS8EZH9AbO0m74h7UXs-q5v2co7W6M' },
                 { date: '2025-06-03', time: '06:59', url: '' },
                 { date: '2025-06-04', time: '06:59', url: '' }
               ];
