--- a/year7-answer.html
+++ b/year7-answer.html
@@ -145,8 +145,8 @@
                 { date: '2025-05-29', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQT10Wu9QPopSL3mzIUFfo69ASDcYrRCXA-mziQkr_LM8Qs' },
                 { date: '2025-05-30', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSCBlL-dJj1Q4aEi7L_tYXxATNSmaKxMLEk2IoNnp8v0z0' },
                 { date: '2025-05-31', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTf7QygGfgzSY24bhWMW5fkAYEkkUbgn1N2HcGOD460KfU' },
-                { date: '2025-06-01', time: '06:59', url: '' },
-                { date: '2025-06-02', time: '06:59', url: '' },
+                { date: '2025-06-01', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQg4F1G_WYBSoAkj_zMdrxsAY_FPKiEukLMyzwrT9WLdMw' },
+                { date: '2025-06-02', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTNyaKBJE_LT7qqf1nJ8RN1AYPrh_Cxsm4cpBORTGPDW7w' },
                 { date: '2025-06-03', time: '06:59', url: '' },
                 { date: '2025-06-04', time: '06:59', url: '' }
               ];
