--- a/year8-today.html
+++ b/year8-today.html
@@ -145,8 +145,8 @@
                 { date: '2025-05-29', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSUjLLE2eg3Sptw5H4AD4lTARmzaVTHMtWRo7bcitWh2Hw' },
                 { date: '2025-05-30', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS6_TI0uyeoRagunl3PRUcMAT4KyJF5kInBdNCUhJh2Fn0' },
                 { date: '2025-05-31', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQRpH4NAtB2Sa0ok1ovPYE3AXXITMfs7jYdtvvKSHHwfHg' },
-                { date: '2025-06-01', time: '06:59', url: '' },
-                { date: '2025-06-02', time: '06:59', url: '' },
+                { date: '2025-06-01', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTJI6snnDGgR4sg9zrG5lkNAadwsFYCstzzAUJ1lbRc_po' },
+                { date: '2025-06-02', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQR72n0R35u3T45Kxfy2SveIAU3uRF74Owtvnwdn9b68PcI' },
                 { date: '2025-06-03', time: '06:59', url: '' },
                 { date: '2025-06-04', time: '06:59', url: '' }
               ];      
