--- a/year8-answer.html
+++ b/year8-answer.html
@@ -145,8 +145,8 @@
                 { date: '2025-05-29', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS7x-oaHTpLQY3DTYoA0CR3AbTKcns1MaF0kzi9s4vPSTM' },
                 { date: '2025-05-30', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS1a4YPPfEPTLkKi8UrzR8VAcb9Gfk9ag9Ur1G9UZRff98' },
                 { date: '2025-05-31', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTu_qMbje1eS7rvi9h94f4YAcFViPl_pSLytXPhALCkYm0' },
-                { date: '2025-06-01', time: '06:59', url: '' },
-                { date: '2025-06-02', time: '06:59', url: '' },
+                { date: '2025-06-01', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQaoUxWAZRPQJPvsmsOJbPAAT_H3i9osIZnL7ugZd926Ds' },
+                { date: '2025-06-02', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTKOOuzwN6HSrT2_QFuS--eAWFZhNQF-vT7vskC9ARz9aY' },
                 { date: '2025-06-03', time: '06:59', url: '' },
                 { date: '2025-06-04', time: '06:59', url: '' }
               ];
