--- a/Year7-today.html
+++ b/Year7-today.html
@@ -139,6 +139,7 @@
           <script>
               // Array of objects with date, time, and corresponding URL
               const schedule = [
+                { date: '2025-06-05', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTZvjULisSBTZZ0O3An2sKwAd3XM9sp0AoounB4eXLlfTw' },
                 { date: '2025-05-26', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTHeQu7jxbSRZ1d3nQKkFu2Acn0Kpy0spH7iHGgbU3GdN4' },
                 { date: '2025-05-27', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQuXwCR3ENySqqhNqtiKHRTAXciZKxCDGcXXxWx2fYVgro' },
                 { date: '2025-05-28', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSh5uRt9qx0RqPx-YA4T5hXAX9R7fJCNWQ-ViDn6OHmM4I' },
