--- a/year8-today.html
+++ b/year8-today.html
@@ -140,9 +140,9 @@
             
               const schedule = [
                 { date: '2025-06-25', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTdIXM4lBLYS7anZw1-XIw7ATU3xGVk31tO3uTAyujExTQ' },
-                { date: '2025-06-26', time: '06:59', url: 'https://1d8dd37d65e185b290/IQSYpCUDB1wdQZgQQ1y930yDAZM6hKS1WzUj1WtOi-frjXg' },
-                { date: '2025-06-27', time: '06:59', url: 'https://1drv./IQRLn1I8FcVYTqyIp1ICUvD0AfEWrUMdre-apypTqnonW5Y' },
-                { date: '2025-06-28', time: '06:59', url: 'https://1drv.ms/p/crNaPjRZIyLn-7JfvDAaLrIe1P6DWhNdxElmrZ4qo' },
+                { date: '2025-06-26', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQR3_zGHZxSoR4R7kBxdAO6cAfP3n6H_GK6iUdO3gu8oyNk' },
+                { date: '2025-06-27', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQScEO428sIkTYakS3Vg2rX-ATcoquE_xwFyC_D3o0Ugcjw' },
+                { date: '2025-06-28', time: '06:59', url: 'ttps://1drv.ms/p/c/8dd37d65e185b290/IQRiSVrtdxHvQI-UyKXK1qKfAZ3f-tx-JROPwBK81r8nt8k' },
                 { date: '2025-06-19', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSajX1o1R9lR5nTBBNsnOe5AaaOoYI0ffNg78S-crK-U4k' },
                 { date: '2025-06-20', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRdp5AEf4mfQ61UIpzpjfJmAYwbLBGld1jBST76uG4ohL4' },
                 { date: '2025-06-21', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRrRrrIzlNjR7EpmTinzGPsAS1ff5sbs8tNBvMdzzINxmk' },
