--- a/Year7-today.html
+++ b/Year7-today.html
@@ -139,16 +139,16 @@
           <script>
               // Array of objects with date, time, and corresponding URL
               const schedule = [
-                { date: '2025-06-25', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQIyeTsQpV9RpsM2MBENBf8AeY8cLiC-hUM5ejSwOLrU3E' },
-                { date: '2025-06-26', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRsGAorRr5dS4XytAhdIM56Aef67_Xf1WOyec2Rmnxs-io' },
-                { date: '2025-06-27', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTMmqHRDPf6TqST4sLCH2DXAYtR_v3EMReoC2P2rjtmbM4' },
-                { date: '2025-06-28', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRMNkDGbEalQ6_rJp9mjRLrAceiPmGlRGmx9tn9-3jXjAA' },
-                { date: '2025-06-29', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQCd-dX5JNhTr0waGnuJs2IAY82C-aEWTPaaHuvctwWDEg' },
-                { date: '2025-06-30', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSAOb2BV4ViTpLqVlwITeusAYqPBaBMZIfl96wGlJBF1CU' },
-                { date: '2025-06-21', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRUGmLTMkqPSbPxtonIx4s-AQEFTZxrJx5MHwQFYVeDSSU' },
-                { date: '2025-06-22', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTKjyYrnM3iS7XaUlV-ykYaARecjrL__rYjhzX1uZwp8PA' },
-                { date: '2025-06-23', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSL5UU_oiHvRaly_q4bns9LAVACtoiMOoOmYli2kX-tius' },
-                { date: '2025-06-24', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTgXI08a5GTQqShq7mc5lwQARUdbfiUE5XGIwGwepvVaUw' }
+                { date: '2025-07-05', time: '06:59', url: 'https:p/c/8dd37d65e185b290/IQQIyeTsQpV9RpsM2MBENBf8AeY8cLiC-hUM5ejSwOLrU3E' },
+                { date: '2025-07-06', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRsGAorRr5dS4XytAhdIM56Aef67_Xf1WOyec2Rmnxs-io' },
+                { date: '2025-07-07', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTMmqHRDPf6TqST4sLCH2DXAYtR_v3EMReoC2P2rjtmbM4' },
+                { date: '2025-07-08', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRMNkDGbEalQ6_rJp9mjRLrAceiPmGlRGmx9tn9-3jXjAA' },
+                { date: '2025-07-09', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQCd-dX5JNhTr0waGnuJs2IAY82C-aEWTPaaHuvctwWDEg' },
+                { date: '2025-07-10', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSAOb2BV4ViTpLqVlwITeusAYqPBaBMZIfl96wGlJBF1CU' },
+                { date: '2025-07-01', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSw-EOXwmMgRbXote36V-1yAWnEQSqWzaSJkVi-gEayHYc' },
+                { date: '2025-07-02', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSLXL-3gntVSYDFku8sya1LAZ4D2dvLmxEnME8VDQ_i-pw' },
+                { date: '2025-07-03', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRbeC8JeNVjRaVBJqkPg11LAfNWvkFj6ce1sis65mpCMoE' },
+                { date: '2025-07-04', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRLO_Kw9B4MSp8mKj76H52ZAcrPoEyOU8L3abuD9Uir6M0' }
               ];
       
               function updateIframeSrc() {
