--- a/year8-today.html
+++ b/year8-today.html
@@ -139,12 +139,12 @@
           <script>
             
               const schedule = [
-                { date: '2025-07-05', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTdIXM4lBLYS7anZw1-XIw7ATU3TAyujExTQ' },
-                { date: '2025-07-06', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQR3_zGHZxSoR4R7kBxdAO6cAfP3n6H_GK6iUdO3gu8oyNk' },
-                { date: '2025-07-07', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQScEO428sIkTYakS3Vg2rX-ATcoquE_xwFyC_D3o0Ugcjw' },
-                { date: '2025-07-08', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRiSVrtdxHvQI-UyKXK1qKfAZ3f-tx-JROPwBK81r8nt8k' },
-                { date: '2025-07-09', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQK_8DNkmLcRIUFFUB3d5tmAfSoME57WS2gIFhstahCea0' },
-                { date: '2025-07-10', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRdp5AEf4mfQ61UIpzpjfJmAYwbLBGld1jBST76uG4ohL4' },
+                { date: '2025-07-05', time: '06:59', url: 'ttps://1drv.ms/p/c/8dd37d65e185b290/IQTalc45UPGnTa2KeAw-eKNUAe5LCG43WwH29_JMFUNLkSA' },
+                { date: '2025-07-06', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQRUVmSGw6rSYJZwF9gS0o_AWpAwxP64-2nXhTK45r3wbg' },
+                { date: '2025-07-07', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSTnf5_GdhyQKJcxwj1spTLAYgHyzIUq_-qda590Ta0VpY' },
+                { date: '2025-07-08', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTb6gQQYhRsSL718pFYqbGnAXA8ceFil_E98pwhivMDjmk' },
+                { date: '2025-07-09', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQScI48rIgn-QbCS4DJ0_4z8Aa0L4GFZMNGR7bL8IPVepNc' },
+                { date: '2025-07-10', time: '06:59', url: 'https://1drv.BGld1jBST76uG4ohL4' },
                 { date: '2025-07-01', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRrRrrIzlNjR7EpmTinzGPsAS1ff5sbs8tNBvMdzzINxmk' },
                 { date: '2025-07-02', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTl3Hq8HbQyQ4RQCIna_b7TAYZKMIBB9PHqdH_8YYDy1e4' },
                 { date: '2025-07-03', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSgmkO4ZZ_hSo6r3sMCMB6GAULIEe3pvfOM2YBpLJ9_pTY' },
