--- a/Year7-today.html
+++ b/Year7-today.html
@@ -138,18 +138,26 @@
       
           <script>
               // Array of objects with date, time, and corresponding URL
-              const schedule = 
-                { date: '2025-09-29', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQ35gtT3VCHT4OXBV4IdnSJAZ1nsuBmoEUR9Rx4MAu2ttk' },                     
-                { date: '2025-09-30', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSFQRBjVX6ZR6Wh1EO2X6MdAc5u_CAdrvQ9AKA6hkszTsk' },
-                { date: '2025-10-01', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRRS6S17na6RrF6WKFXHyWDAaGTTrboXClI2JP7akObL0M' },
-                { date: '2025-10-02', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQF6tjm4vX6ToFt-oJRPtpKAVv4NxNxD2tybew7GBirSsw' },
-                { date: '2025-10-03', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTKpc1ei3ALTrANj7hi22BrAXrwhVplEBeE_35WMZ92eQ0' },
-                { date: '2025-10-04', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQThASRbp00nSaofqGzBbwlSAchHK0UgdngCjharxZ0LVO4' },
-                { date: '2025-10-05', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQR63JUTVQD8TJdnkDqaCU8zAeVHOVT8I1G5cxyjlFzLo0c' },
-                { date: '2025-10-06', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQY0_jp_Ko2T7cyDnSoWC5BAVpxoq48DaKIM52ee4jBaiQ' },
-                { date: '2025-10-07', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQHO2j1y9BbT4ESvQY21-LjAfa70l1lci4T_0D1GXfFt-Y' },
-                { date: '2025-10-08', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTZ7hunzTMZQqjA5Xi23_0bAXxvfHnqT1gJt38PNr2pamc' },
-              ];
+              const schedule = [
+                  { date: '2025-10-14', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTUX6G1Uee-RIHLPdHbPYFXActrK_ZKm_fL5NYvr_kJFOg' },
+                  { date: '2025-10-15', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTNFIMbDxsGSJoyhZ629yBtAZvmQQqWidMHD0gSHZp5Jl0' },
+                  { date: '2025-10-16', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTvsZxHJgmmSrv_McmIjeEIAfIisWeK45luEpgwt7ZtnY8' },
+                  { date: '2025-10-17', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTeRvxCUyIrTKzrNAhi8CzZAS0tCt5PQ0wfysTXRr-4-C0' },
+                  { date: '2025-10-18', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTrfFF5i8LtQZWx6ylxK_LmAQsKqb8ppMv2LCtyDpu1sF4' },
+                  { date: '2025-10-19', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSbVwBd12qZTaGLQ92PpM_bAWA_TGyFB1SpQlb8OpLth-s' },
+                  { date: '2025-10-20', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTYh3UXkBmTSJr2UK74LABoAanSTVL_hcvrOiu-L4fNfd8' },
+                  { date: '2025-10-21', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTHkiFmI9LrRqaZqMJz09I_AbjSFY_HGfGVBWYoC7JZkcc' },
+                  { date: '2025-10-22', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSHCfrt4eloTZHT1oirDpLzAVjC8WfhFvrDUix2LG7o_sk' },
+                  { date: '2025-10-23', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQYcmS4mz0_TLQpWUbs5BN-AZAsX-o8O5IcG3wtZYKCE8A' },
+                  { date: '2025-10-24', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSLgq5vz-3mRLzz_3sqHFWjAWTiehOYqGBeUtVt5TO_1kc' },
+                  { date: '2025-10-25', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTfTZfRYfQASK8uhdmEeTzGAQ-DdcYjiIDIans42PlLyOg' },
+                  { date: '2025-10-26', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQGH1f5SZegSIjx53dkFTstAZX-X8R-Lr-NFNpFa72k2wA' },
+                  { date: '2025-10-27', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSJSKiSvtFpSK362rlhMAcWAf7wRBnKwz-m3i7Mkk9iq9M' },
+                  { date: '2025-10-28', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTaj9FPEwmiQq5CsoTL-aM7AVp5c4AwOIxLNNyHiJvkzVQ' },
+                  { date: '2025-10-29', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSoL1OiG_RXQ41Jpj0k03-OAYpEkiBhNmr3XREZNY6pJBQ' },
+                  { date: '2025-10-30', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQr9N6lDcFJToi-SkLFEKSZARkuXe89P9Kav7Z1N9DnMOY' },
+                  { date: '2025-10-31', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRT9_zsZrSRToYi_VMyKZ-PARCqkpvmub6XDwmRpCTzVmQ' }
+];
       
               function updateIframeSrc() {
         const now = new Date();
